# regex

./: BUILD.bazel
example/grep/: grep.cpp
example/snippets/: icu_example.cpp  regex_split_example_1.cpp
include/boost/regex/: icu.hpp
include/boost/regex/pending/: object_cache.hpp  unicode_iterator.hpp
include/boost/regex/v5/: perl_matcher.hpp  perl_matcher_non_recursive.hpp
src/: c_regex_traits.cpp  icu.cpp  regex.cpp  wc_regex_traits.cpp
test/captures/: captures_test.cpp
test/concepts/: concept_check.cpp  icu_concept_check.cpp  test_bug_11988.cpp
test/regress/: test_icu.cpp
