load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.regex",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.concept_check",
        "@boost.config",
        "@boost.container_hash",
        "@boost.core",
        "@boost.integer",
        "@boost.mpl",
        "@boost.predef",
        "@boost.smart_ptr",
        "@boost.static_assert",
        "@boost.throw_exception",
        "@boost.type_traits",
    ],
)
